<resources>
    <string name="app_name">Test</string>
    <string name="currency_exchange">CURRENCY EXCHANGE</string>
    <string name="sell">Sell</string>
    <string name="receive">Receive</string>
    <string name="submit">submit</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="bgn">BGN</string>
    <string-array name="courses">
        <item>EUR</item>
        <item>USD</item>
        <item>BGN</item>
    </string-array>
</resources>